--- a/lineset-calculator.html
+++ b/lineset-calculator.html
@@ -89,7 +89,8 @@
 <script>
 /** =========================
  *  DATA (cost per foot)
- *  Edit ONLY these numbers.
+ *  You *can* paste $ or commas,
+ *  we will sanitize them.
  *  ========================= */
 const COPPER_COST_PER_FT = {
   '3/8"': 3.98,
@@ -102,9 +103,9 @@ const COPPER_COST_PER_FT = {
   '1-5/8"': 28.11,
   '2-1/8"': 43.35,
   '2-5/8"': 63.36,
-  '3-1/8"': 85.90,
-  '3-5/8"': 113.18,
-  '4-1/8"': 142.74
+  '3-1/8"': "85.90",
+  '3-5/8"': "113.18",
+  '4-1/8"': "142.74"
 };
 
 const ARMAFLEX_COST_PER_FT = {
@@ -127,10 +128,28 @@ const ARMAFLEX_COST_PER_FT = {
 function normalizeSize(s){
   return String(s || "")
     .trim()
-    .replace(/”|“/g, '"')   // curly double quotes -> "
-    .replace(/’/g, "'")     // curly single quote -> '
-    .replace(/\u2011|\u2013|\u2014/g, '-') // nonstandard dashes -> -
-    .replace(/\s+/g, ' ');  // collapse weird spacing
+    .replace(/”|“/g, '"')
+    .replace(/’/g, "'")
+    .replace(/\u2011|\u2013|\u2014/g, '-')
+    .replace(/\s+/g, ' ');
+}
+
+/** Parse numbers even if pasted with $ or commas */
+function parseCost(v){
+  if (v == null) return 0;
+  if (typeof v === "number") return v;
+  const cleaned = String(v).replace(/[^0-9.\-]/g, ""); // strips $, commas, spaces
+  const n = parseFloat(cleaned);
+  return Number.isFinite(n) ? n : 0;
+}
+
+function getCost(map, size){
+  const key = normalizeSize(size);
+  if (!(key in map)) {
+    console.warn("Size not found in price map:", key, "Available:", Object.keys(map));
+    return 0;
+  }
+  return parseCost(map[key]);
 }
 
 /** Default size lists for dropdowns */
@@ -155,7 +174,7 @@ const totalCostEl = document.getElementById('totalCost');
 const breakdownEl = document.getElementById('breakdown');
 
 function money(n){
-  if (!isFinite(n)) return '$0.00';
+  if (!Number.isFinite(n)) return '$0.00';
   return n.toLocaleString('en-CA', { style:'currency', currency:'CAD' });
 }
 
@@ -164,27 +183,22 @@ function fillSelect(selectEl, options){
 }
 
 function calc(){
-  const suctionSizeRaw = suctionSel.value;
-  const liquidSizeRaw  = liquidSel.value;
-
-  const suctionSize = normalizeSize(suctionSizeRaw);
-  const liquidSize  = normalizeSize(liquidSizeRaw);
-
+  const suctionSize = suctionSel.value;
+  const liquidSize  = liquidSel.value;
   const length = Math.max(0, parseFloat(lengthInp.value || 0));
 
-  const suctionUnit = COPPER_COST_PER_FT[suctionSize] ?? 0;
-  const liquidUnit  = COPPER_COST_PER_FT[liquidSize] ?? 0;
-  const insUnit     = ARMAFLEX_COST_PER_FT[suctionSize] ?? 0; // insulation matched to suction size
+  const suctionUnit = getCost(COPPER_COST_PER_FT, suctionSize);
+  const liquidUnit  = getCost(COPPER_COST_PER_FT, liquidSize);
+  const insUnit     = getCost(ARMAFLEX_COST_PER_FT, suctionSize);
 
   const suctionCost = suctionUnit * length;
   const liquidCost  = liquidUnit * length;
   const insCost     = insUnit * length;
-
   const total = suctionCost + liquidCost + insCost;
 
-  suctionUnitPill.textContent = `Suction Copper: ${suctionSize} @ ${money(suctionUnit)}/ft`;
-  suctionInsUnitPill.textContent = `Suction Insulation: ${suctionSize} @ ${money(insUnit)}/ft`;
-  liquidUnitPill.textContent = `Liquid Copper: ${liquidSize} @ ${money(liquidUnit)}/ft`;
+  suctionUnitPill.textContent = `Suction Copper: ${normalizeSize(suctionSize)} @ ${money(suctionUnit)}/ft`;
+  suctionInsUnitPill.textContent = `Suction Insulation: ${normalizeSize(suctionSize)} @ ${money(insUnit)}/ft`;
+  liquidUnitPill.textContent = `Liquid Copper: ${normalizeSize(liquidSize)} @ ${money(liquidUnit)}/ft`;
 
   suctionCostEl.textContent = money(suctionCost);
   insulationCostEl.textContent = money(insCost);
@@ -198,7 +212,7 @@ function calc(){
 fillSelect(suctionSel, SUCTION_OPTIONS);
 fillSelect(liquidSel, LIQUID_OPTIONS);
 
-// sensible defaults
+// defaults
 suctionSel.value = '7/8"';
 liquidSel.value  = '3/8"';
 
@@ -207,4 +221,5 @@ calc();
 </script>
 </body>
 </html>
+
 
