--- a/lineset-calculator.html
+++ b/lineset-calculator.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Lineset Cost Calculator</title>
+  <title>Lineset Cost Calculator (Cost-Only)</title>
   <style>
     :root { font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; }
     body { margin: 0; background:#0b0c10; color:#e8e8ea; }
@@ -25,7 +25,6 @@
     .result .value { font-size:18px; margin-top:4px; font-weight:600; }
     .total { grid-column: 1 / -1; border:1px solid #3a4050; }
     .muted { font-size: 12px; color:#7f8592; margin-top:6px; }
-    .footer { margin-top:10px; font-size:11px; color:#7f8592; }
     @media (max-width:720px){
       .grid { grid-template-columns: 1fr; }
       .results { grid-template-columns: 1fr; }
@@ -39,17 +38,17 @@
 
       <div class="grid">
         <div>
-          <label for="suction">Suction Pipe Size</label>
+          <label>Suction Pipe Size</label>
           <select id="suction"></select>
         </div>
 
         <div>
-          <label for="liquid">Liquid Pipe Size</label>
+          <label>Liquid Pipe Size</label>
           <select id="liquid"></select>
         </div>
 
         <div>
-          <label for="length">Length (ft)</label>
+          <label>Length (ft)</label>
           <input id="length" type="number" min="0" step="0.1" value="10" />
         </div>
       </div>
@@ -80,108 +79,111 @@
         </div>
       </div>
 
-      <div class="footer">
+      <div class="muted" style="margin-top:10px;">
         Update prices in the DATA section below when supplier costs change.
       </div>
     </div>
   </div>
 
 <script>
-/** =========================
- *  DATA (cost per foot)
- *  You *can* paste $ or commas,
- *  we will sanitize them.
- *  ========================= */
+/** =======================================================
+ *  DATA MAPS — COST PER FOOT
+ *  (Safe: supports $, commas, strings, floats)
+ *  ======================================================= */
 const COPPER_COST_PER_FT = {
-  '3/8"': 3.98,
-  '1/2"': 3.98,
-  '5/8"': 7.09,
-  '3/4"': 9.69,
-  '7/8"': 11.22,
-  '1-1/8"': 16.21,
-  '1-3/8"': 21.71,
-  '1-5/8"': 28.11,
-  '2-1/8"': 43.35,
-  '2-5/8"': 63.36,
+  '3/8"': "3.98",
+  '1/2"': "3.98",
+  '5/8"': "7.09",
+  '3/4"': "9.69",
+  '7/8"': "11.22",
+  '1-1/8"': "16.21",
+  '1-3/8"': "21.71",
+  '1-5/8"': "28.11",
+  '2-1/8"': "43.35",
+  '2-5/8"': "63.36",
   '3-1/8"': "85.90",
   '3-5/8"': "113.18",
   '4-1/8"': "142.74"
 };
 
 const ARMAFLEX_COST_PER_FT = {
-  '3/8"': 1.07,
-  '1/2"': 1.14,
-  '5/8"': 1.26,
-  '3/4"': 1.30,
-  '7/8"': 1.39,
-  '1-1/8"': 1.56,
-  '1-3/8"': 1.72,
-  '1-5/8"': 1.96,
-  '2-1/8"': 2.51,
-  '2-5/8"': 3.40,
-  '3-1/8"': 4.00,
-  '3-5/8"': 5.26,
-  '4-1/8"': 5.84
+  '3/8"': "1.07",
+  '1/2"': "1.14",
+  '5/8"': "1.26",
+  '3/4"': "1.30",
+  '7/8"': "1.39",
+  '1-1/8"': "1.56",
+  '1-3/8"': "1.72",
+  '1-5/8"': "1.96",
+  '2-1/8"': "2.51",
+  '2-5/8"': "3.40",
+  '3-1/8"': "4.00",
+  '3-5/8"': "5.26",
+  '4-1/8"': "5.84"
 };
 
-/** Normalize dropdown text to match keys */
+/** =======================================================
+ *  NORMALIZATION FUNCTIONS
+ *  Fix curly quotes, inch symbols, fraction slash, odd dashes
+ *  ======================================================= */
 function normalizeSize(s){
   return String(s || "")
     .trim()
-    .replace(/”|“/g, '"')
+    .replace(/″/g, '"')      // U+2033 double-prime → "
+    .replace(/“|”/g, '"')    // curly quotes → "
+    .replace(/′/g, "'")      // prime → '
     .replace(/’/g, "'")
-    .replace(/\u2011|\u2013|\u2014/g, '-')
+    .replace(/⁄/g, "/")      // fraction slash → /
+    .replace(/\u2011|\u2012|\u2013|\u2014/g, "-") // nonstandard dashes → -
     .replace(/\s+/g, ' ');
 }
 
-/** Parse numbers even if pasted with $ or commas */
+/** Sanitize numbers: remove $, commas, spaces */
 function parseCost(v){
-  if (v == null) return 0;
   if (typeof v === "number") return v;
-  const cleaned = String(v).replace(/[^0-9.\-]/g, ""); // strips $, commas, spaces
-  const n = parseFloat(cleaned);
+  const n = parseFloat(String(v).replace(/[^0-9.\-]/g, ""));
   return Number.isFinite(n) ? n : 0;
 }
 
+/** Safe lookup: normalize size and match */
 function getCost(map, size){
   const key = normalizeSize(size);
-  if (!(key in map)) {
-    console.warn("Size not found in price map:", key, "Available:", Object.keys(map));
-    return 0;
-  }
-  return parseCost(map[key]);
+  if (key in map) return parseCost(map[key]);
+
+  console.warn("⚠ Size not found:", key);
+  return 0;
 }
 
-/** Default size lists for dropdowns */
-const SUCTION_OPTIONS = Object.keys(COPPER_COST_PER_FT);
-const LIQUID_OPTIONS  = Object.keys(COPPER_COST_PER_FT);
-
-/** =========================
- *  UI + CALC
- *  ========================= */
+/** =======================================================
+ *  UI REFERENCES
+ *  ======================================================= */
 const suctionSel = document.getElementById('suction');
 const liquidSel  = document.getElementById('liquid');
 const lengthInp  = document.getElementById('length');
 
-const suctionUnitPill = document.getElementById('suctionUnit');
-const suctionInsUnitPill = document.getElementById('suctionInsUnit');
-const liquidUnitPill = document.getElementById('liquidUnit');
+const suctionUnitPill     = document.getElementById('suctionUnit');
+const suctionInsUnitPill  = document.getElementById('suctionInsUnit');
+const liquidUnitPill      = document.getElementById('liquidUnit');
 
-const suctionCostEl = document.getElementById('suctionCost');
-const insulationCostEl = document.getElementById('insulationCost');
-const liquidCostEl = document.getElementById('liquidCost');
-const totalCostEl = document.getElementById('totalCost');
-const breakdownEl = document.getElementById('breakdown');
+const suctionCostEl      = document.getElementById('suctionCost');
+const insulationCostEl   = document.getElementById('insulationCost');
+const liquidCostEl       = document.getElementById('liquidCost');
+const totalCostEl        = document.getElementById('totalCost');
+const breakdownEl        = document.getElementById('breakdown');
 
+/** Format money */
 function money(n){
-  if (!Number.isFinite(n)) return '$0.00';
-  return n.toLocaleString('en-CA', { style:'currency', currency:'CAD' });
+  return Number(n).toLocaleString('en-CA', { style:'currency', currency:'CAD' });
 }
 
+/** Fill dropdowns automatically */
 function fillSelect(selectEl, options){
   selectEl.innerHTML = options.map(s => `<option value="${s}">${s}</option>`).join('');
 }
 
+/** =======================================================
+ *  CALCULATION LOGIC
+ *  ======================================================= */
 function calc(){
   const suctionSize = suctionSel.value;
   const liquidSize  = liquidSel.value;
@@ -194,32 +196,37 @@ function calc(){
   const suctionCost = suctionUnit * length;
   const liquidCost  = liquidUnit * length;
   const insCost     = insUnit * length;
-  const total = suctionCost + liquidCost + insCost;
+  const total       = suctionCost + liquidCost + insCost;
 
-  suctionUnitPill.textContent = `Suction Copper: ${normalizeSize(suctionSize)} @ ${money(suctionUnit)}/ft`;
-  suctionInsUnitPill.textContent = `Suction Insulation: ${normalizeSize(suctionSize)} @ ${money(insUnit)}/ft`;
-  liquidUnitPill.textContent = `Liquid Copper: ${normalizeSize(liquidSize)} @ ${money(liquidUnit)}/ft`;
+  suctionUnitPill.textContent     = `Suction Copper: ${normalizeSize(suctionSize)} @ ${money(suctionUnit)}/ft`;
+  suctionInsUnitPill.textContent  = `Suction Insulation: ${normalizeSize(suctionSize)} @ ${money(insUnit)}/ft`;
+  liquidUnitPill.textContent      = `Liquid Copper: ${normalizeSize(liquidSize)} @ ${money(liquidUnit)}/ft`;
 
-  suctionCostEl.textContent = money(suctionCost);
+  suctionCostEl.textContent    = money(suctionCost);
   insulationCostEl.textContent = money(insCost);
-  liquidCostEl.textContent = money(liquidCost);
-  totalCostEl.textContent = money(total);
+  liquidCostEl.textContent     = money(liquidCost);
+  totalCostEl.textContent      = money(total);
 
   breakdownEl.textContent =
     `${length} ft × (${money(suctionUnit)}/ft suction + ${money(insUnit)}/ft insulation + ${money(liquidUnit)}/ft liquid)`;
 }
 
-fillSelect(suctionSel, SUCTION_OPTIONS);
-fillSelect(liquidSel, LIQUID_OPTIONS);
+/** =======================================================
+ *  INIT
+ *  ======================================================= */
+const SIZE_OPTIONS = Object.keys(COPPER_COST_PER_FT);
 
-// defaults
+fillSelect(suctionSel, SIZE_OPTIONS);
+fillSelect(liquidSel, SIZE_OPTIONS);
+
 suctionSel.value = '7/8"';
 liquidSel.value  = '3/8"';
 
-[suctionSel, liquidSel, lengthInp].forEach(el => el.addEventListener('input', calc));
+[suctionSel, liquidSel, lengthInp].forEach(el =>
+  el.addEventListener('input', calc)
+);
+
 calc();
 </script>
 </body>
 </html>
-
-
